adjusting workout links

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -97,13 +97,15 @@ header {
 
 }*/
 
-.links {
+#workouts-link {
   color: white;
   text-decoration: none;
   text-align: center;
   display: block;
-  margin: 10 px;
+  margin: 0 auto;
   font-size: 20px;
+  font-family: 'Oswald';
+  background-color: rgba(255, 255, 255, .5);
 }
 
 /*#sign-up-form {
@@ -412,8 +414,8 @@ right: 10px;
 #hamstring-dot {
   position: absolute;
   background: red;
-  bottom: -188px;
-  right: -45px;
+  /*bottom: -188px;*/
+  /*right: -45px;*/
 }
 
 
@@ -422,7 +424,7 @@ right: 10px;
   position: absolute;
   background: red;
   bottom: 202px;
-  right: -15px;
+  /*right: -15px;*/
 
 }
 
@@ -588,6 +590,7 @@ right: 58px
   top:200px;
   right:300px;
   border: 2px solid black;
+  font-family: "Oswald";
 
 }
 
@@ -608,7 +611,7 @@ right: 58px
   top:200px;
   left:300px;
   border: 2px solid black;
-
+  font-family: "Oswald";
 
 }
 
@@ -623,6 +626,7 @@ right: 58px
   color:white;
   margin:0px;
   text-align:center;
+  font-family: "Oswald";
 
 }
 
@@ -645,4 +649,5 @@ right: 58px
   background-color: black;
   font-weight: bold;
   font-size: 18px;
+  font-family: 'Oswald';
 }
