--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -83,7 +83,7 @@ opacity: .7;
   /*height: 300px;*/
 /*width: 100px;*/
 border-radius: 50px;
-background-color: red;
+/*background-color: red;*/
 opacity: .7;
 position: absolute;
 top: 90px;
@@ -101,13 +101,13 @@ left: 669px;
 
   /*height: 230px;*/
 /*width: 50px;*/
-border-radius: 50px;
-background-color: red;
+/*border-radius: 50px;*/
+/*background-color: red;*/
 opacity: .7;
 position: absolute;
-bottom: 122px;
+bottom: 162px;
 left: 687px;
--webkit-transform: rotate(1deg);
+/*-webkit-transform: rotate(1deg);*/
 }
 
 #Calve:hover {
