--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
 
   <% if logged_in? %>
   <body style="background-image: url('assets/background-2.jpg');">
-  <a class="links" id="workouts" href="/workouts"> Workouts </a>
+  <a id="workouts-link" href="/workouts"> View Your Workout </a>
     <h1 id="bodypart-text"></h1>
     <%= image_tag "reartorso.png", :class => "rear-torso-image" %>
 
@@ -27,8 +27,6 @@
     <%= image_tag "rearlegedit.png", :class => "rear-leg-image" %>
     <%= image_tag "front-leg-final.png", :class => "front-leg-image" %>
 
-  <!--  <%= image_tag "leftchest.png", :class => "leftchest"%>
-   -->
   <!-- <div id="info">
     <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> What we provide </h1>
       <p style="color: red; text-align: center; font-family: 'Frijole'"> An innovative and efficient way for the user to learn about exercises </p>
@@ -254,7 +252,7 @@
     </div>
 
 <!-- <h1 class="rear" id="rear-torso-text"> Back </h1> -->
-       <h1 id="back-view">back view</h1>
+       <h1 id="back-view">Back View</h1>
         <img style="height:20px;width:20px;" src="assets/return.png">
 
   <h1 class="rear" id="rear-leg-text"> Rear Leg </h1>
