replacing rear leg text

--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -119,8 +119,9 @@ left: 687px;
 
 
 #rear-leg-text {
-  display: block;
-  margin: 0 auto;
+  text-align: center;
+  color: white;
+  font-family: 'Oswald';
 }
 
 
