--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -251,11 +251,13 @@
       <p class="text-preview">Lower-Back</p>
     </div>
 
-<!-- <h1 class="rear" id="rear-torso-text"> Back </h1> -->
+<!-- <h1 class="rear" id="back-view"> Back </h1> -->
        <h1 id="back-view">Back View</h1>
-        <img style="height:20px;width:20px;" src="assets/return.png">
+        <img id="return" style="height:20px;width:20px;" src="assets/return.png">
 
-  <h1 class="rear" id="rear-leg-text"> Rear Leg </h1>
+      <h1 id="rear-leg-text"> Rear Leg </h1>
+        <img id="return-rear-leg" style="height:20px;width:20px;" src="assets/return.png">
+
 
   </body>
 <% else %>
