--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -108,6 +108,11 @@ header {
   background-color: rgba(255, 255, 255, .5);
 }
 
+#workouts-link:hover {
+  color: red;
+
+}
+
 /*#sign-up-form {
   color: white;
   font-size: 14px;
@@ -627,12 +632,12 @@ right: 58px
   margin:0px;
   text-align:center;
   font-family: "Oswald";
-
+  /*background-color: white;*/
 }
 
 #back-view:hover {
   cursor: pointer;
-
+  color: red;
 }
 
 #back-view img {
@@ -650,4 +655,41 @@ right: 58px
   font-weight: bold;
   font-size: 18px;
   font-family: 'Oswald';
+}
+
+#videoContainer iframe {
+
+}
+
+#ninja {
+  /*background-color: white;*/
+  /*list-style: none;*/
+  /*border: 10px solid white;*/
+}
+
+#ninja li {
+  display: inline;
+
+}
+
+@media only screen and (max-width: 720px) {
+  #header-nav li h1 {
+    font-size: 20px;
+  }
+
+}
+
+
+@media only screen and (max-width: 530px) {
+  #header-nav li h1 {
+    font-size: 18px;
+  }
+
+}
+
+@media only screen and (max-width: 505px) {
+  #header-nav li h1 {
+    font-size: 8px;
+  }
+
 }
