--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -48,7 +48,10 @@
           </p>
   </div> -->
 
-  <div id="videoContainer">
+  <div style="background-image:url('assets/background-2.jpg');" id="videoContainer">
+    <ul id="ninja">
+
+    </ul>
   </div>
 
   <%= image_tag "torsoedit2.png", :class => "torso" %>
