--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -38,10 +38,15 @@ body {
   background-image: url("background-barbell.jpg") ;
   /*background-repeat: none;*/
   background-repeat: no-repeat;
-  background-size: cover;
-  /*background-position: center;*/
+  /*background-size: cover;*/
+  background-position: center;
   margin: 0px;
   position: relative;
+  overflow: scroll;
+}
+
+html {
+  overflow: scroll;
 }
 
 header {
@@ -224,7 +229,7 @@ right: 10px;
 
 #form-box-login {
   background-color: rgba(0, 0, 0, .8);
-  height: 350px;
+  height: 428px;
   width: 400px;
   margin: 0 auto;
   border-radius: 10px;
@@ -692,4 +697,23 @@ right: 58px
     font-size: 8px;
   }
 
+
+}
+
+@media only screen and (max-width: 600px) {
+
+  #info-box {
+  height: 100px;
+  width: 400px;
+  margin-top: 10px;
+  }
+
+  #info-box h1 {
+    margin-top: 0px;
+    font-size: 10px;
+  }
+
+  #info-box p {
+    font-size: 10px;
+  }
 }
