--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>WorkMeOut</title>
+    <title>Welcome to WorkMeOut!</title>
+
   </head>
-  <body>
+<body>
     <header>
       <ul id="header-nav">
       <li><h1>WorkMeOut</h1></li>
