--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -35,12 +35,9 @@
   src: url("PoiretOne-Regular.ttf") format("truetype");
 }
 
-
 body {
   background-image: url("background-barbell.jpg") ;
-  /*background-repeat: none;*/
   background-repeat: no-repeat;
-  /*background-size: cover;*/
   background-position: center;
   margin: 0px;
   position: relative;
@@ -54,13 +51,11 @@ html {
 header {
   background-color: white;
   margin: 0px;
-
 }
 
 #logo {
   color: white;
   text-align: left;
-  /*font-size: 45px;*/
   margin:0px;
   margin-left: 15px;
 }
@@ -69,40 +64,25 @@ header {
   cursor: pointer;
   margin: 0 auto;
   display: block;
-
 }
 
 .rear {
   color: white;
   font-size: 45px;
   text-align: center;
-
 }
 
 
 .rear-torso-image {
   display: block;
   margin: 0 auto;
-  /*top: 100px;*/
-  /*right: 470px;*/
-
 }
 
 #bodypart-text {
   color: white;
   z-index: 1;
 }
-/*
-#banner {
-  height: 96px;
-  width: 1425px;
-  background-color: black;
-  opacity: .3;
-  z-index: -2;
-  position: absolute;
-  top: 0px;
 
-}*/
 
 #workouts-link {
   color: white;
@@ -117,24 +97,8 @@ header {
 
 #workouts-link:hover {
   color: red;
-
 }
 
-/*#sign-up-form {
-  color: white;
-  font-size: 14px;
-  margin-left: 30px;
-  margin-top: 60px;
-}
-
-#login-form {
-  color: white;
-  font-size: 14px;
-  margin-left: 30px;
-  margin-top: 30px ;
-
-}
-*/
 #logout {
   text-align: left;
   position: absolute;
@@ -147,68 +111,9 @@ position: absolute;
 right: 10px;
 
 }
-
-/*#footer {
-  height: 75px;
-  width: 1425px;
-  background-color: black;
-  opacity: .3;
-  z-index: -2;
-  position: absolute;
-  bottom: 0px;
-
-}*/
-
-
-/*#info {
-  height: 400px;
-  width: 400px;
-  position: absolute;
-  background-color: black;
-  opacity: .6;
-  top: 170px;
-  left: 40px;
-  border: 10px dotted white;
-  border-radius: 10px;
-  padding: 10px;
-  float: left;
-
-}
-*/
-
-/*#contactinfo {
-  height: 400px;
-  width: 400px;
-  position: absolute;
-  background-color: black;
-  opacity: .6;
-  top: 170px;
-  right: 40px;
-  border: 10px dotted white;
-  border-radius: 10px;
-  padding: 10px;
-  float: right;
-
-}*/
-
-/*#form-container {
-  height: 400px;
-  width: 400px;
-  background-color: black;
-  box-shadow: 10px;
-  margin: 0 auto;
-  margin-top: 100px;
-  display: block;
-  border: 4px solid white;
-  border-radius: 120px;
-
-}*/
-
-
 .flash {
   background-color: white;
   margin-top: 30px;
-
 }
 
 .forms {
@@ -236,7 +141,6 @@ right: 10px;
   margin: 0 auto;
   border-radius: 10px;
   box-shadow: 1px 13px 33px black;
-
 }
 
 #form-box-login p {
@@ -244,7 +148,6 @@ right: 10px;
   text-align: center;
   font-size: 20px;
   font-family: 'Poiret One', cursive;
-  /*margin: 0px;*/
 }
 
 #form-box-signup {
@@ -254,7 +157,6 @@ right: 10px;
   margin: 0 auto;
   border-radius: 10px;
   box-shadow: 1px 13px 33px black;
-
 }
 
 #form-box-signup p {
@@ -262,7 +164,6 @@ right: 10px;
   text-align: center;
   font-size: 20px;
   font-family: 'Poiret One', cursive;
-  /*margin: 0px;*/
 }
 
 #info-box {
@@ -295,9 +196,7 @@ right: 10px;
   box-shadow: 10px 10px 10px black;
   -webkit-box-shadow: 1px 13px 33px rgba(0, 0, 0, 1);
   text-decoration: none;
-  /*text-align: left;*/
   margin-top: 10px;
-
 }
 
 .text-field {
@@ -309,7 +208,6 @@ right: 10px;
   margin-left: 30px;
   position: relative;
   background: red;
-  /*top: 20px;*/
 }
 
 #abdominals-dot {
@@ -317,7 +215,6 @@ right: 10px;
   margin-left: 40px;
   position: relative;
   background: red;
-  /*top: 20px;*/
 }
 
 #left-chest-dot {
@@ -325,7 +222,6 @@ right: 10px;
   margin-left: 30px;
   position: relative;
   background: red;
-  /*top: 20px;*/
 }
 
 #right-chest-dot {
@@ -333,7 +229,6 @@ right: 10px;
   margin-left: 30px;
   position: relative;
   background: red;
-  /*top: 20px;*/
 }
 
 #right-arm-dot {
@@ -342,9 +237,7 @@ right: 10px;
   right: 40px;
   margin-top: 80px;
   margin-left: 30px;
-  /*position: relative;*/
   background: red;
-  /*top: 20px;*/
 }
 
 #left-arm-dot {
@@ -353,7 +246,6 @@ right: 10px;
   margin-left: 10px;
   position: absolute;
   background: red;
-  /*top: 20px;*/
 }
 
 #left-leg-dot {
@@ -361,16 +253,12 @@ right: 10px;
   margin-left: 50px;
   position: relative;
   background: red;
-  /*top: 20px;*/
 }
 
-#right-leg-dot {
-  margin-top: 60px;
-  margin-left: 80px;
+#right-leg-dot {  margin-left: 80px;
   position: absolute;
   right: 60px;
   background: red;
-  /*top: 20px;*/
 }
 
 #bicep-dot {
@@ -378,8 +266,6 @@ right: 10px;
   margin-left: 50px;
   position: relative;
   background: red;
-  /*bottom: 20px;*/
-  /*right: 27px;*/
 }
 
 #tricep-dot {
@@ -387,47 +273,32 @@ right: 10px;
   margin-left: 40px;
   position: absolute;
   background: red;
-  /*bottom: -38px;*/
-  /*right: -3px;*/
-
 }
 
 #shoulder-dot {
   position: absolute;
   background: red;
-  /*bottom: -28px;*/
-  /*right: -5px;*/
-
 }
 
 #forearm-dot {
   position: absolute;
   background: red;
-  /*bottom: -28px;*/
-  /*right: -35px;*/
-
 }
 
 #quad-dot {
   position: absolute;
   background: red;
-  /*bottom: -68px;*/
-  /*right: -15px;*/
 }
 
 #tibialis-dot {
   position: absolute;
   background: red;
   margin-bottom:80px;
-  /*bottom: 202px;*/
-  /*right: -15px;*/
 }
 
 #hamstring-dot {
   position: absolute;
   background: red;
-  /*bottom: -188px;*/
-  /*right: -45px;*/
 }
 
 
@@ -436,57 +307,49 @@ right: 10px;
   position: absolute;
   background: red;
   bottom: 202px;
-  /*right: -15px;*/
-
 }
 
 #right-glute-dot {
- position: absolute;
-background: red;
-bottom: 92px;
-right: 55px;
+  position: absolute;
+  background: red;
+  bottom: 92px;
+  right: 55px;
+}
 
-}
 #left-glute-dot {
-position: absolute;
-background: red;
-bottom: 92px;
-right: 41px;
+  position: absolute;
+  background: red;
+  bottom: 92px;
+  right: 41px;
 }
+
 #right-lat-dot {
-position: absolute;
-background: red;
-/*bottom: -24px;*/
-/*right: 25px;*/
+  position: absolute;
+  background: red;
 }
+
 #left-lat-dot {
-position: absolute;
-background: red;
-/*bottom: -38px;*/
-/*right: -15px;*/
+  position: absolute;
+  background: red;
 }
 
 #trapezius-dot {
  position: absolute;
 background: red;
-/*bottom: 20px;*/
 right: 82px;
 }
 
 #rhomboids-dot {
   position: absolute;
 background: red;
-/*bottom: -18px;*/
-/*right: -68px;*/
 }
 
 #lowerback-dot {
   position: absolute;
-background: red;
-bottom: 92px;
-right: 58px
+  background: red;
+  bottom: 92px;
+  right: 58px
 }
-
 
 .pulse {
   width: 17px;
@@ -569,7 +432,6 @@ right: 58px
 
 
 #header-nav {
-  list-decoration: none;
   margin: 0px;
   text-align: center;
   margin-right: 130px;
@@ -590,7 +452,6 @@ right: 58px
 #header-nav a {
   text-decoration: none;
   color: black;
-  /*float: right;*/
 }
 
 #arm-image-preview-container {
@@ -603,14 +464,12 @@ right: 58px
   right:300px;
   border: 2px solid black;
   font-family: "Oswald";
-
 }
 
 #arm-preview-image {
   height: 280px;
   width: 110px;
   margin: 0 auto;
-
 }
 
 
@@ -624,14 +483,12 @@ right: 58px
   left:300px;
   border: 2px solid black;
   font-family: "Oswald";
-
 }
 
 #leg-preview-image {
   height: 280px;
   width: 100px;
   margin: 0 auto;
-
 }
 
 #back-view {
@@ -639,7 +496,6 @@ right: 58px
   margin:0px;
   text-align:center;
   font-family: "Oswald";
-  /*background-color: white;*/
 }
 
 #back-view:hover {
@@ -664,26 +520,13 @@ right: 58px
   font-family: 'Oswald';
 }
 
-#videoContainer iframe {
-
-}
-
-#ninja {
-  /*background-color: white;*/
-  /*list-style: none;*/
-  /*border: 10px solid white;*/
-}
-
-#ninja li {
-  display: inline;
-
+#videoContainer iframe {}
 }
 
 @media only screen and (max-width: 720px) {
   #header-nav li h1 {
     font-size: 20px;
   }
-
 }
 
 
@@ -691,15 +534,12 @@ right: 58px
   #header-nav li h1 {
     font-size: 18px;
   }
-
 }
 
 @media only screen and (max-width: 505px) {
   #header-nav li h1 {
     font-size: 8px;
   }
-
-
 }
 
 @media only screen and (max-width: 600px) {
@@ -718,4 +558,9 @@ right: 58px
   #info-box p {
     font-size: 10px;
   }
+}
+
+#github-icon {
+  height: 34px;
+  width: 34px;
 }
