deleting bodypart stylesheets and compiling into style.css

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -255,7 +255,9 @@ right: 10px;
   background: red;
 }
 
-#right-leg-dot {  margin-left: 80px;
+#right-leg-dot {
+  margin-top: 60px;
+  margin-left: 80px;
   position: absolute;
   right: 60px;
   background: red;
