--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,481 @@
+@font-face {
+  font-family: Ultimate-Midnight;
+  src: url("ultimateMIDNIGHT.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: SecretCode;
+  src: url("secretcode.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: Oswald;
+  src: url("Oswald-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: Poiret One;
+  src: url("PoiretOne-Regular.ttf") format("truetype");
+}
+
+body {
+  background-image: url("background-barbell.jpg") ;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0px;
+  position: relative;
+  overflow: scroll;
+}
+
+html {
+  overflow: scroll;
+}
+
+header {
+  background-color: white;
+  margin: 0px;
+}
+
+ /*IMAGES CSS*/
+
+.rear-torso-image {
+  display: block;
+  margin: 0 auto;
+}
+
+.front-leg-image {
+  display: block;
+  margin: 0 auto;
+}
+
+
+#arm-image-preview-container {
+  background-color:white;
+  height: 360px;
+  width: 130px;
+  position: absolute;
+  text-align:center;
+  top:200px;
+  right:300px;
+  border: 2px solid black;
+  font-family: "Oswald";
+}
+
+#arm-preview-image {
+  height: 280px;
+  width: 110px;
+  margin: 0 auto;
+}
+
+
+#leg-image-preview-container {
+  background-color:white;
+  height: 360px;
+  width: 120px;
+  position: absolute;
+  text-align:center;
+  top:200px;
+  left:300px;
+  border: 2px solid black;
+  font-family: "Oswald";
+}
+
+#leg-preview-image {
+  height: 280px;
+  width: 100px;
+  margin: 0 auto;
+}
+  /*IMAGES END*/
+
+
+#header-nav {
+  margin: 0px;
+  text-align: center;
+  margin-right: 130px;
+}
+
+#header-nav li {
+  display: inline-block;
+  margin: 10px;
+  border: 5px solid black;
+  padding: 5px;
+  text-align: center;
+}
+
+#header-nav h1 {
+  margin: 0px;
+}
+
+#header-nav a {
+  text-decoration: none;
+  color: black;
+}
+
+#back-view {
+  cursor: pointer;
+  margin: 0 auto;
+  display: block;
+}
+
+#workouts-link {
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  font-size: 20px;
+  font-family: 'Oswald';
+  background-color: rgba(255, 255, 255, .5);
+}
+
+
+#workouts-link:hover {
+  color: red;
+}
+
+.flash {
+  background-color: white;
+  margin-top: 30px;
+}
+
+.forms {
+  text-align: center;
+  vertical-align: middle;
+  list-style: none;
+  margin: 0 auto;
+  margin-right: 30px;
+}
+
+.forms label {
+  color: white;
+  font-size: 20px;
+  font-family: 'Poiret One', cursive;
+}
+
+.forms input {
+  font-size: 30px;
+}
+
+#form-box-login {
+  background-color: rgba(0, 0, 0, .8);
+  height: 428px;
+  width: 400px;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 1px 13px 33px black;
+}
+
+#form-box-login p {
+  color: #A0A0A0 ;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Poiret One', cursive;
+}
+
+#form-box-signup {
+  background-color: rgba(0, 0, 0, .8);
+  height: 428px;
+  width: 400px;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 1px 13px 33px black;
+}
+
+#form-box-signup p {
+  color: #A0A0A0 ;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Poiret One', cursive;
+}
+
+#info-box {
+  background-color: rgba(255, 255, 255, .6);
+  height: 200px;
+  width: 600px;
+  box-shadow: 1px 13px 33px black;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding:20px;
+}
+
+#info-box h1 {
+    font-family: Ultimate-Midnight;
+}
+
+#info-box p {
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+}
+
+
+.buttons {
+  color: white;
+  padding: 0px 100px 0px 100px;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 0, 0, 1)), color-stop(0.49, rgba(255, 0, 0, 0.4)), color-stop(0.51, rgba(255, 0, 0, .5)), to(rgba(255, 0, 0, 0.7))); /* Chrome,Safari4+ */
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+  -webkit-border-radius: 5px;
+  box-shadow: 10px 10px 10px black;
+  -webkit-box-shadow: 1px 13px 33px rgba(0, 0, 0, 1);
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+#abdominals-dot {
+  margin-top: 60px;
+  margin-left: 40px;
+  position: relative;
+  background: red;
+}
+
+#left-chest-dot {
+  margin-top: 40px;
+  margin-left: 30px;
+  position: relative;
+  background: red;
+}
+
+#right-chest-dot {
+  margin-top: 40px;
+  margin-left: 30px;
+  position: relative;
+  background: red;
+}
+
+#right-arm-dot {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  margin-top: 80px;
+  margin-left: 30px;
+  background: red;
+}
+
+#left-arm-dot {
+  top: 70px;
+  margin-top: 80px;
+  margin-left: 10px;
+  position: absolute;
+  background: red;
+}
+
+#left-leg-dot {
+  margin-top: 60px;
+  margin-left: 50px;
+  position: relative;
+  background: red;
+}
+
+#right-leg-dot {
+  margin-top: 60px;
+  margin-left: 80px;
+  position: absolute;
+  right: 60px;
+  background: red;
+}
+
+#bicep-dot {
+  margin-top: 40px;
+  margin-left: 50px;
+  position: relative;
+  background: red;
+}
+
+#tricep-dot {
+  margin-top: 40px;
+  margin-left: 40px;
+  position: absolute;
+  background: red;
+}
+
+#shoulder-dot {
+  position: absolute;
+  background: red;
+}
+
+#forearm-dot {
+  position: absolute;
+  background: red;
+}
+
+#quad-dot {
+  position: absolute;
+  background: red;
+}
+
+#tibialis-dot {
+  position: absolute;
+  background: red;
+  margin-bottom:80px;
+}
+
+#hamstring-dot {
+  position: absolute;
+  background: red;
+}
+
+#calf-dot {
+  position: absolute;
+  background: red;
+  bottom: 202px;
+}
+
+#right-glute-dot {
+  position: absolute;
+  background: red;
+  bottom: 92px;
+  right: 55px;
+}
+
+#left-glute-dot {
+  position: absolute;
+  background: red;
+  bottom: 92px;
+  right: 41px;
+}
+
+#right-lat-dot {
+  position: absolute;
+  background: red;
+}
+
+#left-lat-dot {
+  position: absolute;
+  background: red;
+}
+
+#trapezius-dot {
+  position: absolute;
+  background: red;
+  right: 82px;
+}
+
+#rhomboids-dot {
+  position: absolute;
+  background: red;
+}
+
+#lowerback-dot {
+  position: absolute;
+  background: red;
+  bottom: 92px;
+  right: 58px
+}
+
+.pulse {
+  width: 17px;
+  height: 17px;
+  border: 5px solid red;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background-color: red;
+  z-index: 10;
+  position: absolute;
+}
+
+.dot {
+  border: 10px solid red;
+  background: transparent;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  border-radius: 60px;
+  height: 67px;
+  width: 67px;
+  -webkit-animation: pulse 1s ease-out;
+  -moz-animation: pulse 1s ease-out;
+  animation: pulse 1s ease-out;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  position: absolute;
+  top: -25px;
+  left: -25px;
+  z-index: 1;
+  opacity: 0;
+}
+
+@-moz-keyframes pulse {
+ 0% {
+    -moz-transform: scale(0);
+    opacity: 0.0;
+ }
+ 25% {
+    -moz-transform: scale(0);
+    opacity: 0.1;
+ }
+ 50% {
+    -moz-transform: scale(0.1);
+    opacity: 0.3;
+ }
+ 75% {
+    -moz-transform: scale(0.5);
+    opacity: 0.5;
+ }
+ 100% {
+    -moz-transform: scale(1);
+    opacity: 0.0;
+ }
+}
+
+@-webkit-keyframes "pulse" {
+ 0% {
+    -webkit-transform: scale(0);
+    opacity: 0.0;
+ }
+ 25% {
+    -webkit-transform: scale(0);
+    opacity: 0.1;
+ }
+ 50% {
+    -webkit-transform: scale(0.1);
+    opacity: 0.3;
+ }
+ 75% {
+    -webkit-transform: scale(0.5);
+    opacity: 0.5;
+ }
+ 100% {
+    -webkit-transform: scale(1);
+    opacity: 0.0;
+ }
+}
+
+#back-view {
+  color:white;
+  margin:0px;
+  text-align:center;
+  font-family: "Oswald";
+}
+
+#back-view:hover {
+  cursor: pointer;
+  color: red;
+}
+
+#back-view img {
+  border: white;
+}
+
+.text-preview {
+  margin:0 auto;
+  text-align:center;
+  border:2px solid black;
+  display:inline-block;
+  padding: 1px 5px 1px 5px;
+  color: white;
+  background-color: black;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: 'Oswald';
+}
+
+#videoContainer iframe {}
+}
+
+
+          /*BODY PARTS CSS BEGIN!*/
+
 /*Abs*/
 #Abdominals {
   position: absolute;
@@ -157,10 +635,7 @@ cursor: pointer;
   cursor: pointer;
 }
 
-.front-leg-image {
-  display: block;
-  margin: 0 auto;
-}
+
 
 #Quad {
   position: absolute;
@@ -260,7 +735,6 @@ left: 687px;
   cursor: pointer;
 }
 
-
 #Lower-Back {
   position: absolute;
   bottom: 241px;
@@ -300,7 +774,7 @@ left: 687px;
   opacity: 1;
   cursor: pointer;
 }
-/*Glutes*/
+
 #Right-Glute {
   opacity: .7;
   position: absolute;
@@ -327,6 +801,44 @@ left: 687px;
   cursor: pointer;
 }
 
+      /*ALL MEDIA QUERIES*/
+
+@media only screen and (max-width: 720px) {
+  #header-nav li h1 {
+    font-size: 20px;
+  }
+}
+
+
+@media only screen and (max-width: 530px) {
+  #header-nav li h1 {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 505px) {
+  #header-nav li h1 {
+    font-size: 8px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  #info-box {
+  height: 100px;
+  width: 400px;
+  margin-top: 10px;
+  }
+
+  #info-box h1 {
+    margin-top: 0px;
+    font-size: 10px;
+  }
+
+  #info-box p {
+    font-size: 10px;
+  }
+}
 
 
 
