--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,6 +36,26 @@ header {
   margin: 0px;
 }
 
+/*WORKOUTS VIDEO CONTAINER*/
+#videoContainer {
+  display: block;
+}
+
+iframe {
+  text-align: center;
+  display: block;
+  transition: .5s all;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+iframe:hover {
+  height: 315px;
+  width: 460px;
+}
+
+
+
  /*IMAGES CSS*/
 
 .rear-torso-image {
@@ -100,6 +120,8 @@ header {
   border: 5px solid black;
   padding: 5px;
   text-align: center;
+  font-family: "Poiret One";
+
 }
 
 #header-nav h1 {
@@ -471,7 +493,7 @@ header {
 }
 
 #videoContainer iframe {}
-}
+
 
 
           /*BODY PARTS CSS BEGIN!*/
@@ -484,7 +506,6 @@ header {
   opacity: .7;
   border-radius: 50px;
 }
-
 
 #Abdominals:hover {
   cursor: pointer;
