--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
   <head>
     <title>Welcome to WorkMeOut!</title>
   </head>
-    <body id="body" style="background-image: url("http://functionalathletics.com/images/background_3.jpg");">
+    <body id="body" style="background-image: url('http://functionalathletics.com/images/background_3.jpg');">
 
     <header>
       <ul id="header-nav">
@@ -53,26 +53,26 @@
   </div>
 <!-- Right chest -->
   <div class="bodypart" id="Right-Chest">
-  <div id="right-chest-dot">
-    <div class="dot"></div>
-    <div class="pulse"></div>
-  </div>
+    <div id="right-chest-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+    </div>
   <p class="text-preview">Right-Chest</p>
   </div>
 <!-- Abs -->
   <div class="bodypart" id="Abdominals">
-  <div id="abdominals-dot">
-    <div class="dot"></div>
-    <div class="pulse"></div>
-  </div>
+    <div id="abdominals-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+    </div>
   <p class="text-preview">Abdominals</p>
   </div>
 <!-- Right arm -->
   <div class="bodypart" id="Right-Arm">
     <div id="right-arm-dot">
-    <div class="dot"></div>
-    <div class="pulse"></div>
-  </div>
+      <div class="dot"></div>
+      <div class="pulse"></div>
+    </div>
   <p class="text-preview">Right<br>Arm</p>
   </div>
 <!-- Arm preview on hover -->
@@ -230,7 +230,7 @@
   <p class="text-preview">Lower-Back</p>
   </div>
 
-  <h1 id="back-view">Back View</h1>
+  <h1 id="back-view"> Back View </h1>
   <img id="return" style="height:20px;width:20px;" src="assets/return.png">
 
   <h1 id="rear-leg-text"> Rear Leg </h1>
@@ -276,7 +276,5 @@
   <% flash.each do |key, value| %>
   <div class="flash"><p style="text-align:center; color:red;"><%= value %></p><br></div>
   <% end %>
-
-
-</body>
+  </body>
 </html>
