adjusting nav bar

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -111,7 +111,7 @@ iframe:hover {
 #header-nav {
   margin: 0px;
   text-align: center;
-  margin-right: 130px;
+  /*margin-right: 130px;*/
 }
 
 #header-nav li {
