--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -41,17 +41,35 @@ header {
   display: block;
 }
 
-iframe {
+.iframe-video {
   text-align: center;
   display: block;
   transition: .5s all;
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  width: 360px;
+  height: 215px;
 }
 
-iframe:hover {
+.iframe-video:hover {
   height: 315px;
   width: 460px;
+}
+
+.video-button {
+  display: block;
+  border: 2px solid black;
+  border-radius: 5px;
+  font-size: 20px;
+  margin: 0 auto;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 0, 0, 1)), color-stop(0.49, rgba(255, 0, 0, 0.4)), color-stop(0.51, rgba(255, 0, 0, .5)), to(rgba(255, 0, 0, 0.7)));
+  color: white;
+  margin-bottom:
+}
+
+.video-button:hover {
+  /*background-color: red;*/
 }
 
  /*IMAGES CSS*/
